@@ -1,4 +1,5 @@
 HEAD
+	+ Modify webadmin service when upgrading from 3.2
 	+ Show enable errors in module status table
 4.0.2
 	+ Remove incorrect directory not exists warnings
